--- a/Aula-04/cadastroTime/cadastroTime/src/main/resources/templates/cadastroJogador.html
+++ b/Aula-04/cadastroTime/cadastroTime/src/main/resources/templates/cadastroJogador.html
@@ -6,12 +6,14 @@
 </head>
 <body>
 
-	<form>
-	Nome:
-	<input type="text">
-	Time:
-	<input type="text">
-	
+	<form method="post" >
+		Nome:
+		<input type="text" name="nome"><br>
+		Time:
+		<input type="text" name="time"><br>
+		
+		<input type="submit" name="enviar" value="enviar"><br>
+		
 	</form>
 
 </body>
