--- a/Aula-05/cadastroAnimais/cadastroAnimais/src/main/resources/templates/cadastroAnimal.html
+++ b/Aula-05/cadastroAnimais/cadastroAnimais/src/main/resources/templates/cadastroAnimal.html
@@ -15,9 +15,7 @@
 		<input name="raca" type="text">
 		
 		
-		<input name="submt" type="submit" value="Enviar">
-	
-	
+		<input name="submit" type="submit" value="Enviar">
 	
 	
 	<form>
