--- a/Aula-05/cadastroAnimais/cadastroAnimais/src/main/resources/templates/cadastroAnimal.html
+++ b/Aula-05/cadastroAnimais/cadastroAnimais/src/main/resources/templates/cadastroAnimal.html
@@ -3,21 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <title>Cadastro Animal</title>
+<!-- Adicionando Bootstrap CSS -->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 <body>
+	<div class="container">
+		<form method="post">
+			<div class="form-group">
+				<label for="nome">Nome:</label>
+				<input id="nome" name="nome" type="text" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="raca">Raça:</label>
+				<input id="raca" name="raca" type="text" class="form-control">
+			</div>
+			<button type="submit" name="submit" class="btn btn-primary">Cadastrar</button>
+		</form>
+	</div>
 
-	<form method="post">
-		
-		Nome:
-		<input name="nome" type="text">
-		
-		Raça:
-		<input name="raca" type="text">
-		
-		
-		<input name="submit" type="submit" value="Enviar">
-	
-	
-	<form>
 </body>
 </html>
