--- a/Aula-05/cadastroAnimais/cadastroAnimais/src/main/resources/templates/editarAnimal.html
+++ b/Aula-05/cadastroAnimais/cadastroAnimais/src/main/resources/templates/editarAnimal.html
@@ -3,26 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+
+
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 	<body>
 	
-	<div th:each="animal : ${animal}">
-			<form method="post">
-			
-				Nome:
-					<input name="nome" type="text" th:value="${animal.nome}">
-				
-				Raça:
-					<input name="raca" type="text" th:value="${animal.raca}">
-				
-				
-					<input name="submit" type="submit" value="Enviar">
-			
-		
-		
-			</form>
+	<div class="container" th:each="animal : ${animal}">
+		<form method="post">
+			<div class="form-group">
+				<label for="nome">Nome:</label>
+				<input id="nome" name="nome" type="text" class="form-control" th:value="${animal.nome}">
+			</div>
+			<div class="form-group">
+				<label for="raca">Raça:</label>
+				<input id="raca" name="raca" type="text" class="form-control" th:value="${animal.raca}">
+			</div>
+			<button type="submit" name="submit" class="btn btn-primary">Alterar</button>
+		</form>
 	</div>
 		
+
+
 
 	</body>
 </html>
